Changed Wiki page ajax request to not use jQuery to handle data, fixed loading spinner on mobile devices, removed old HTML template

--- a/css/media.css
+++ b/css/media.css
@@ -40,4 +40,8 @@
         position: relative;
         height: 205px;
     }
+
+    .loading {
+        
+    }
 }
